syntax = "proto3";
package  cursor;
option go_package = "./cursor";

enum StreamUnifiedChatRequestThinkingLevel {
  THINKING_LEVEL_UNSPECIFIED = 0;
  THINKING_LEVEL_MEDIUM = 1;
  THINKING_LEVEL_HIGH = 2;
}

message BidiAppend {

  message SessionKey {
    string value = 1;
  }

  string chunk = 1;
  SessionKey sessionKey = 2;
}

message StreamUnified {
  string value = 1;
}

message ChatMessage {

  message Content {
    message Message {
      string value = 1;
      uint32 unknown_field2 = 2;
      string uid = 13;
      uint32 unknown_field29 = 29;
      uint32 role = 47;
      optional string empty51 = 51;
    }

    message Model {
      string value = 1;
      optional string empty4 = 4;
      optional bool max_mode = 8;
    }

    message Unknown_field15 {
      message Unknown_field6 {
        optional string empty1 = 1;
        optional string empty2 = 2;
      }

      optional string empty3 = 3;
      Unknown_field6 unknown_field6 = 6;
      uint32 unknown_field8 = 8;
      uint32 unknown_field9 = 9;
    }

    message Info {
      string os = 1;
      string arch = 2;
      string version = 3;
      string bash = 4;
      string date = 5;
    }

    message Unknown_field30 {
      string uuid = 1;
      uint32 unknown_field3 = 3;
    }

    repeated Message messages = 1;
    uint32 unknown_field2 = 2;
    optional string empty3 = 3;
    uint32 unknown_field4 = 4;
    Model model = 5;
    Unknown_field15 unknown_field15 = 15;
    uint32 unknown_field19 = 19;
    bool long_context_mode = 22;
    string uid = 23;
    Info info = 26;
    uint32 unknown_field27 = 27;
    optional string empty29 = 29;
    Unknown_field30 unknown_field30 = 30;
    bool use_full_inputs_context = 35;
    optional uint32 unknown_field38 = 38;
    uint32 unknown_field46 = 46; // 2
    optional string empty47 = 47;
    optional uint32 unknown_field48 = 48;
    StreamUnifiedChatRequestThinkingLevel thinking_level = 49;
    optional uint32 unknown_field51 = 51;
    optional uint32 unknown_field53 = 53;
    string agent = 54;
  }

  Content content = 1;
}

message ResMessage {
  message Msg {
    message MessageThinking {
      string text = 1;
      string signature = 2;
      string redacted_thinking = 3;
      bool is_last_thinking_chunk = 4;
    }
    string value = 1;
    MessageThinking thinking = 25;
  }

  Msg msg = 2;
}